/*
 * Copyright (C) 2017-2019 Dremio Corporation
 *
 * Licensed under the Apache License, Version 2.0 (the "License");
 * you may not use this file except in compliance with the License.
 * You may obtain a copy of the License at
 *
 *     http://www.apache.org/licenses/LICENSE-2.0
 *
 * Unless required by applicable law or agreed to in writing, software
 * distributed under the License is distributed on an "AS IS" BASIS,
 * WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
 * See the License for the specific language governing permissions and
 * limitations under the License.
 */
syntax = "proto2";
package exec.user;

option java_package = "com.dremio.exec.proto";
option java_outer_classname = "UserSessionProtobuf";

option optimize_for = SPEED;

import "UserBitShared.proto";
import "UserCoordRPC.proto";

enum OptionValueType {
  BOOT = 1;
  SYSTEM = 2;
  SESSION = 3;
  QUERY = 4;
}

message OptionValue {
  required OptionValueType type = 1;
  oneof oneOfValue {
      bool boolValue = 2;
      int64 longValue = 3;
      string stringValue = 4;
      double doubleValue = 5;
    }
}

message OptionTTL {
  required int32 start = 1;
  required int32 end = 2;
}

message SubstitutionSettingsRPC {
  repeated string exclusions = 1;
  repeated string inclusions = 2;
}

message UserSessionRPC {
  optional exec.shared.QueryId lastQueryIda = 1;
  optional bool supportComplexTypes = 2;
  optional exec.shared.UserCredentials credentials = 3;
  repeated string defaultSchemaPath = 4;
  optional exec.shared.RpcEndpointInfos clientInfos = 5;
  optional bool useLegacyCatalogName = 6;
  optional string impersonationTarget = 7;
  // It originally uses Calcite Quoting object
  optional string initialQuoting = 8;
  optional bool supportFullyQualifiedProjections = 9;
  optional string routingTag = 10;
  optional string routingQueue = 11;
  optional string routingEngine = 12;
  optional exec.user.RecordBatchFormat recordBatchFormat = 13 [default = DREMIO_1_4];
  optional bool exposeInternalSources = 14;
  optional bool tracingEnabled = 15;
  optional int32 maxMetadataCount = 16;
  optional SubstitutionSettingsRPC substitutionSettings = 17;
  map<string, string> sourceVersionMapping = 18;
}
